Fixed port number, generated artifacts